# folco-core

./: Cargo.toml
src/: cache.rs  color.rs  context.rs  convert.rs  error.rs  lib.rs  progress.rs
src/sys/: linux.rs  macos.rs  mod.rs  windows.rs
